maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: ';' expected but '.' found.
  var marquage:Int=litMessage(x,y)to.Int
                                    ^